Fri Feb 12 19:08:36 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/dance_applicationmanager.mpb:
        * MPC/config/dance_applicationmanager_skel.mpb:
        * MPC/config/dance_applicationmanager_stub.mpb:
          New base projects for the dance am library

Fri Feb 12 18:49:36 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/examples/Hello/Connector/Hello_Connector_exec.h:
          Added some missing includes

Fri Feb 12 18:31:36 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Null_Component_Glfa/Null_Component.mpc:
          Removed not needed after

Fri Feb 12 15:50:36 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DomainParticipant.cpp:
          Reusing topic when reusing a domainparticipant.

        * connectors/dds4ccm/impl/ndds/DomainParticipantFactory.cpp:
          Optimized logging.

Fri Feb 12 13:18:06 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/examples/Shapes/Connector/Shapes_Connector.idl:
        * connectors/dds4ccm/examples/Shapes/Connector/Shapes_Connector_exec.h:
        * connectors/dds4ccm/examples/Shapes/Receiver/Shapes_Receiver.idl:
        * connectors/dds4ccm/examples/Shapes/Receiver/Shapes_Receiver_exec.h:
        * connectors/dds4ccm/examples/Shapes/Receiver/Shapes_Receiver_exec.cpp:
        * connectors/dds4ccm/examples/Shapes/Sender/Shapes_Sender.idl:
        * connectors/dds4ccm/examples/Shapes/Sender/Shapes_Sender_exec.h:
        * connectors/dds4ccm/examples/Shapes/Sender/Shapes_Sender_exec.cpp:
          Moved typed module ShapeType from the CCM_DDS module to the Shapes module
          and renamed it to ShapeTypeConn.

Fri Feb 12 12:37:15 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/CSLDeadline/Connector/CSL_DeadlineTest_Connector.idl:
        * connectors/dds4ccm/tests/CSLDeadline/Connector/CSL_DeadlineTest_Connector_exec.h: