@@ -18,6 +18,7 @@ module SharedDP
     port CCM_DDS::SharedDPTest::DDS_Write write1;
     port CCM_DDS::SharedDPTest::DDS_Write write2;
     port CCM_DDS::SharedDPTest::DDS_Write write3;
+    port CCM_DDS::SharedDPTest::DDS_Write write4;
   };
 };
 
