@@ -44,9 +44,6 @@ $tg_executor = 0;
 $status = 0;
 $cdp_file = "Plan.cdp";
 
-$ENV {'CIAO_TRACE_ENABLE'} = 0;
-$ENV {'DANCE_TRACE_ENABLE'} = 0;
-
 sub create_targets {
     #   naming service
     $tg_naming = PerlACE::TestTarget::create_target (1) || die "Create target for ns failed\n";
